<resources>
    <string name="app_name">Movies</string>
    <string name="film_poster">Film poster</string>
    <string name="blood_sport">Blood sport</string>
    <string name="button_details">Details</string>
    <string name="send_message">Send message</string>
    <string name="inviting">Invitation</string>
    <string name="blood_sport_dsc">American officer Frank Dukes, who from childhood studied under the Japanese master Shidoshi Senzo Tanaka, leaving the military unit without permission, goes to Hong Kong to take part in the underground kumite championship, in which the best fighters of the world participate. In earlier years, Tanaka used the boy as a sparring partner for his son, but after his death, he prepared Dukes for the competition.</string>
    <string name="cocktail_dsc">Brian Flanagan is returning from military service, full of ambition and about to start a career on Wall Street. However, the guy is refused everywhere, employers need a diploma. After several unsuccessful attempts, he takes a job in a bar in Manhattan on a job advertisement. In a drinking establishment, he meets the experienced bartender Doug Coglin, who teaches the art of mixing cocktails and a certain philosophy of life on how to build relationships with women. Things are going uphill, Brian is honing his flairing skills. The place where Brian and Doug work is very popular. Nevertheless, the partners quarrel, not \"dividing\" the girl named Korel and part.</string>
    <string name="commando_dsc">The protagonist, retired colonel John Matrix, lives in a secluded house in the mountains with his teenage daughter Jenny. Jenny is kidnapped by a group of gunmen. The bandits order the colonel to fly to Valverde and eliminate the current president of the country, who knows Matrix well and fully trusts him, clearing the way for a military coup led by Arius. If Matrix fails to complete the task, his daughter will be killed.</string>
    <string name="emmanuelle_dsc">The film describes the erotic adventures of the main character - a beautiful young Frenchwoman Emmanuelle. She lives in Bangkok with her husband Jean, an employee of the embassy. The entire diplomatic corps is languishing with boredom, and therefore very depraved morals reign in it. Jean, who is somewhat older than Emmanuel, not only does not forbid her casual sexual intercourse, but also encourages them in every possible way, believing that they contribute to Emmanuel\'s more liberation in sex. In a very short time, Emmanuel manages to try something that she has never tried before: casual connections with the first comer, lesbian love and so on.</string>
    <string name="cocktail">Cocktail</string>
    <string name="commando">Commando</string>
    <string name="emmanuelle">Emmanuelle</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="ask_exit_conform">Are you exit?</string>
    <string name="exit_title">Exit</string>
    <string name="negative_button">NO</string>
    <string name="positive_button">YES</string>
    <string name="star_tag">\"Star\" tag</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_remove_conform">Are you sure to remove from Favorites?</string>
    <string name="favorites_removing_title">Removing</string>
    <string name="no_name_film">No name film</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_group_communicate">Communicate</string>
    <string name="menu_item_email">Email</string>
    <string name="menu_item_exit">Exit</string>
    <string name="drawer_icon" translatable="false">Drawer icon</string>
    <string name="main_menu_title">Main menu</string>
    <string name="open_drawer_dsc" translatable="false">Open drwer</string>
    <string name="close_drawer_dsc" translatable="false">Close drawer</string>
    <string name="remove_from_favorites_msg">Film has removed from Favorites</string>
    <string name="add_to_favorite_msg">Film has added to Favorites</string>
    <string name="undo_btn_title">UNDO</string>
    <string name="clear_the_cache">Clear the data</string>
    <string name="utils">Utils</string>
    <string name="clear_cache_confirmation">Are you sure you want to clear the data?</string>
    <string name="works_only_with_films_msg">Works only with films list</string>
    <string name="load_data_error_msg">"Error during load data: "</string>
    <string name="repeat_caption">Repeat</string>
    <string name="notify_caption">Notify</string>
    <string name="notification_date_hint">Date of notification</string>
    <string name="button_text_ok">OK</string>
    <string name="image_for_alert_dialog" translatable="false">Image for alert dialog</string>
    <string name="notifications_title">Notifications</string>
    <string name="notification_removed_msg">Notification has deleted</string>
    <string name="current_time_passed_msg">The specified time has already passed</string>
</resources>