<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_item_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_grade_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notify_date_black_24"
            android:title="@string/notifications_title" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_item_exit" />
    </group>

    <item android:title="@string/menu_group_communicate">
        <menu>
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_baseline_email_24"
                android:title="@string/menu_item_email" />
        </menu>
    </item>

    <item android:title="@string/utils">
        <menu>
            <item
                android:id="@+id/nav_delete_cache"
                android:icon="@drawable/ic_baseline_delete_24"
                android:title="@string/clear_the_cache" />
        </menu>
    </item>

</menu>