<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewBloodSport"
            android:layout_width="169dp"
            android:layout_height="229dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/film_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bloodsport" />

        <TextView
            android:id="@+id/textViewBloodSport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/blood_sport"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBloodSport"
            app:layout_constraintStart_toStartOf="@+id/imageViewBloodSport"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBloodSport" />

        <Button
            android:id="@+id/buttonBloodSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_details"
            app:layout_constraintBottom_toBottomOf="@+id/textViewBloodSport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewBloodSport"
            app:layout_constraintTop_toTopOf="parent"
            tools:tag="1" />

        <ImageView
            android:id="@+id/imageViewCocktail"
            android:layout_width="169dp"
            android:layout_height="229dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/film_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewBloodSport"
            app:srcCompat="@drawable/cocktail" />

        <TextView
            android:id="@+id/textViewCocktail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cocktail"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCocktail"
            app:layout_constraintStart_toStartOf="@+id/imageViewCocktail"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCocktail" />

        <Button
            android:id="@+id/buttonCocktail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_details"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCocktail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewCocktail"
            app:layout_constraintTop_toTopOf="@+id/imageViewCocktail"
            tools:tag="2" />

        <ImageView
            android:id="@+id/imageViewCommando"
            android:layout_width="169dp"
            android:layout_height="229dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/film_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCocktail"
            app:srcCompat="@drawable/commando" />

        <TextView
            android:id="@+id/textViewCommando"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/commando"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewCommando"
            app:layout_constraintStart_toStartOf="@+id/imageViewCommando"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCommando" />

        <Button
            android:id="@+id/buttonCommando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_details"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCommando"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewCommando"
            app:layout_constraintTop_toTopOf="@+id/imageViewCommando"
            tools:tag="3" />

        <ImageView
            android:id="@+id/imageViewEmmanuelle"
            android:layout_width="169dp"
            android:layout_height="229dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/film_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCommando"
            app:srcCompat="@drawable/emmanuelle" />

        <TextView
            android:id="@+id/textViewEmmanuelle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/emmanuelle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewEmmanuelle"
            app:layout_constraintStart_toStartOf="@+id/imageViewEmmanuelle"
            app:layout_constraintTop_toBottomOf="@+id/imageViewEmmanuelle" />

        <Button
            android:id="@+id/buttonEmmanuelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_details"
            app:layout_constraintBottom_toBottomOf="@+id/textViewEmmanuelle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewEmmanuelle"
            app:layout_constraintTop_toTopOf="@+id/imageViewEmmanuelle"
            tools:tag="4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>